routing + new page

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,3 +1,9 @@
 .menu-button {
   padding: 0 20px !important;
 }
+
+@media (min-width: 600px) {
+  .MuiPaper-root {
+    top: 64px !important;
+  }
+}
