--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,8 @@
   gap: 24px;
   justify-content: center;
   max-width: 800px;
+  margin-top: 24px;
+  position: relative;
 }
 
 @media (max-width: 600px) {
@@ -78,6 +80,12 @@
 
 .answer {
   font-size: 30px;
+  text-align: center;
+  position: absolute;
+  top: 24px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
 }
 
 .true {
@@ -86,4 +94,8 @@
 
 .false {
   color: red;
+}
+
+.guide-page {
+  padding: 20px;
 }
