--- a/src/index.css
+++ b/src/index.css
@@ -82,10 +82,14 @@
   font-size: 30px;
   text-align: center;
   position: absolute;
-  top: 24px;
+  bottom: -48px;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
+}
+
+.answer p {
+  margin: 0;
 }
 
 .true {
